added encoding parameter to the slides

--- a/SpikeEncoding.slides.html
+++ b/SpikeEncoding.slides.html
@@ -13309,7 +13309,7 @@ a.anchor-link {
 </div></section></section><section><section>
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="Threshold-based-representation-Encoder/Decoder-(Signal-conversion-from-analogue-$\leftrightarrow$-spike-train)">Threshold-based representation Encoder/Decoder (<span style="color:red">Signal conversion from analogue $\leftrightarrow$ spike train</span>)<a class="anchor-link" href="#Threshold-based-representation-Encoder/Decoder-(Signal-conversion-from-analogue-$\leftrightarrow$-spike-train)">&#182;</a></h3>
+<h3 id="Threshold-based-representation-Encoder/Decoder-(Signal-conversion-from-analogue-$\leftrightarrow$-spike-train)">Threshold-based representation Encoder/Decoder (<span style="color:red">Signal conversion from analogue $\leftrightarrow$ spike train</span>)<a class="anchor-link" href="#Threshold-based-representation-Encoder/Decoder-(Signal-conversion-from-analogue-$\leftrightarrow$-spike-train)">&#182;</a></h3><h5 id="factor-=-1.005">factor = 1.005<a class="anchor-link" href="#factor-=-1.005">&#182;</a></h5>
 </div>
 </div>
 </div><div class="fragment">
@@ -13389,7 +13389,7 @@ a.anchor-link {
 </div></section></section><section><section>
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="Step-forward-Encoder/Decoder-(Signal-conversion-from-analogue-$\leftrightarrow$-spike-train)">Step-forward Encoder/Decoder (<span style="color:red">Signal conversion from analogue $\leftrightarrow$ spike train</span>)<a class="anchor-link" href="#Step-forward-Encoder/Decoder-(Signal-conversion-from-analogue-$\leftrightarrow$-spike-train)">&#182;</a></h3>
+<h3 id="Step-forward-Encoder/Decoder-(Signal-conversion-from-analogue-$\leftrightarrow$-spike-train)">Step-forward Encoder/Decoder (<span style="color:red">Signal conversion from analogue $\leftrightarrow$ spike train</span>)<a class="anchor-link" href="#Step-forward-Encoder/Decoder-(Signal-conversion-from-analogue-$\leftrightarrow$-spike-train)">&#182;</a></h3><h5 id="threshold-=-0.26">threshold = 0.26<a class="anchor-link" href="#threshold-=-0.26">&#182;</a></h5>
 </div>
 </div>
 </div><div class="fragment">
@@ -13473,7 +13473,7 @@ a.anchor-link {
 </div></section></section><section><section>
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="Moving-Window-Encoder/Decoder-(Signal-conversion-from-analogue-$\leftrightarrow$-spike-train)">Moving Window Encoder/Decoder (<span style="color:red">Signal conversion from analogue $\leftrightarrow$ spike train</span>)<a class="anchor-link" href="#Moving-Window-Encoder/Decoder-(Signal-conversion-from-analogue-$\leftrightarrow$-spike-train)">&#182;</a></h3>
+<h3 id="Moving-Window-Encoder/Decoder-(Signal-conversion-from-analogue-$\leftrightarrow$-spike-train)">Moving Window Encoder/Decoder (<span style="color:red">Signal conversion from analogue $\leftrightarrow$ spike train</span>)<a class="anchor-link" href="#Moving-Window-Encoder/Decoder-(Signal-conversion-from-analogue-$\leftrightarrow$-spike-train)">&#182;</a></h3><h5 id="window----=-3--&amp;-threshold-=-0.2">window    = 3  &amp; threshold = 0.2<a class="anchor-link" href="#window----=-3--&amp;-threshold-=-0.2">&#182;</a></h5>
 </div>
 </div>
 </div><div class="fragment">
@@ -13555,7 +13555,7 @@ a.anchor-link {
 </div></section></section><section><section>
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="BSA-Encoder/Decoder-(Signal-conversion-from-analogue-$\leftrightarrow$-spike-train)">BSA Encoder/Decoder (<span style="color:red">Signal conversion from analogue $\leftrightarrow$ spike train</span>)<a class="anchor-link" href="#BSA-Encoder/Decoder-(Signal-conversion-from-analogue-$\leftrightarrow$-spike-train)">&#182;</a></h3>
+<h3 id="BSA-Encoder/Decoder-(Signal-conversion-from-analogue-$\leftrightarrow$-spike-train)">BSA Encoder/Decoder (<span style="color:red">Signal conversion from analogue $\leftrightarrow$ spike train</span>)<a class="anchor-link" href="#BSA-Encoder/Decoder-(Signal-conversion-from-analogue-$\leftrightarrow$-spike-train)">&#182;</a></h3><h5 id="threshold-=-1.175">threshold = 1.175<a class="anchor-link" href="#threshold-=-1.175">&#182;</a></h5>
 </div>
 </div>
 </div><div class="fragment">
@@ -13628,7 +13628,7 @@ a.anchor-link {
 </div></section></section><section><section>
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="HSA-Encoder/Decoder-(Signal-conversion-from-analogue-$\leftrightarrow$-spike-train)">HSA Encoder/Decoder (<span style="color:red">Signal conversion from analogue $\leftrightarrow$ spike train</span>)<a class="anchor-link" href="#HSA-Encoder/Decoder-(Signal-conversion-from-analogue-$\leftrightarrow$-spike-train)">&#182;</a></h3>
+<h3 id="HSA-Encoder/Decoder-(Signal-conversion-from-analogue-$\leftrightarrow$-spike-train)">HSA Encoder/Decoder (<span style="color:red">Signal conversion from analogue $\leftrightarrow$ spike train</span>)<a class="anchor-link" href="#HSA-Encoder/Decoder-(Signal-conversion-from-analogue-$\leftrightarrow$-spike-train)">&#182;</a></h3><h5 id="window-=-12">window = 12<a class="anchor-link" href="#window-=-12">&#182;</a></h5>
 </div>
 </div>
 </div><div class="fragment">
@@ -13702,7 +13702,7 @@ a.anchor-link {
 </div></section></section><section><section>
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="MHSA-Encoder/Decoder-(Signal-conversion-from-analogue-$\leftrightarrow$-spike-train)">MHSA Encoder/Decoder (<span style="color:red">Signal conversion from analogue $\leftrightarrow$ spike train</span>)<a class="anchor-link" href="#MHSA-Encoder/Decoder-(Signal-conversion-from-analogue-$\leftrightarrow$-spike-train)">&#182;</a></h3>
+<h3 id="MHSA-Encoder/Decoder-(Signal-conversion-from-analogue-$\leftrightarrow$-spike-train)">MHSA Encoder/Decoder (<span style="color:red">Signal conversion from analogue $\leftrightarrow$ spike train</span>)<a class="anchor-link" href="#MHSA-Encoder/Decoder-(Signal-conversion-from-analogue-$\leftrightarrow$-spike-train)">&#182;</a></h3><h5 id="thresholds-=-0.85">thresholds = 0.85<a class="anchor-link" href="#thresholds-=-0.85">&#182;</a></h5>
 </div>
 </div>
 </div><div class="fragment">
