--- a/SpikeEncoding.slides.html
+++ b/SpikeEncoding.slides.html
@@ -13229,7 +13229,7 @@ a.anchor-link {
 </div><div class="fragment">
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="Compares-the-absolute-signal-change-of-an-input-signal-with-a-threshold">Compares the absolute signal change of an input signal with a threshold<a class="anchor-link" href="#Compares-the-absolute-signal-change-of-an-input-signal-with-a-threshold">&#182;</a></h3><!-- <img src="./img/threshld-based-representation-annotated.png" width="400" height="400"> -->
+<h3 id="Compares-the-absolute-signal-change-of-with-a-threshold">Compares the absolute signal change of with a threshold<a class="anchor-link" href="#Compares-the-absolute-signal-change-of-with-a-threshold">&#182;</a></h3><!-- <img src="./img/threshld-based-representation-annotated.png" width="400" height="400"> -->
 
 <table><tr>
 <td> <img src="./img/threshld-based-representation-annotated.png" alt="Drawing" style="width: 500px;"/> </td>
@@ -13361,7 +13361,7 @@ a.anchor-link {
 </div><div class="fragment">
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="Uses-the-next-available-signal-value-and-checks-if-the-previous-value-(base)-and-an-additional-threshold-is-exceeded">Uses the next available signal value and checks if the previous value (base) and an additional threshold is exceeded<a class="anchor-link" href="#Uses-the-next-available-signal-value-and-checks-if-the-previous-value-(base)-and-an-additional-threshold-is-exceeded">&#182;</a></h3><p><img src="./img/step-forward-annotated.png" width="400" height="400"></p>
+<h3 id="Uses-the-next-available-signal-value-and-checks-if-the-previous-value-(i.e.-base)-and-an-additional-threshold-is-exceeded">Uses the next available signal value and checks if the previous value (i.e. base) and an additional threshold is exceeded<a class="anchor-link" href="#Uses-the-next-available-signal-value-and-checks-if-the-previous-value-(i.e.-base)-and-an-additional-threshold-is-exceeded">&#182;</a></h3><p><img src="./img/step-forward-annotated.png" width="400" height="400"></p>
 
 </div>
 </div>
@@ -13525,8 +13525,10 @@ a.anchor-link {
 </div><div class="fragment">
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="Makes-the-decision-to-spike-by-comparing-an-errors-measure-to-a-threshold,-but-can-only-process-inputs-of-a-specific-range">Makes the decision to spike by comparing an errors measure to a threshold, but can only process inputs of a specific range<a class="anchor-link" href="#Makes-the-decision-to-spike-by-comparing-an-errors-measure-to-a-threshold,-but-can-only-process-inputs-of-a-specific-range">&#182;</a></h3><p><img src="./img/BSA-annotated.png" width="400" height="400"></p>
-
+<h3 id="Makes-the-decision-to-spike-by-comparing-an-errors-measure-to-a-threshold,-but-can-only-process-inputs-of-a-specific-range">Makes the decision to spike by comparing an errors measure to a threshold, but can only process inputs of a specific range<a class="anchor-link" href="#Makes-the-decision-to-spike-by-comparing-an-errors-measure-to-a-threshold,-but-can-only-process-inputs-of-a-specific-range">&#182;</a></h3><table><tr>
+<td> <img src="./img/BSA-annotated.png" alt="Drawing" style="width: 400px;"/> </td>
+<td> <img src="./img/fir.png" alt="Drawing" style="width: 400px;"/> </td>
+</tr></table>
 </div>
 </div>
 </div></div></section></section><section><section>
